将配置参数拆分到env文件

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+COMM_SECIP=true
+COMM_DBLOCK=false
+COMM_SYSNAME=xlaravel后台框架
+COMM_CODETYPE=imgcode
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
