配置参数拆分逻辑修改

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
             "database/factories"
         ],
         "files": [
+            "app/commconfig.php",
             "app/helpers.php"
          ]
     },
